--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -22,10 +22,26 @@
 
   .description {
     text-align: center;
+    width: 100%;
   }
 
   .education h2 {
     font-size: 1.5rem;
     text-align: center;
+  }
+}
+
+@media (max-width: 1100px) {
+  #about {
+    padding-top: 100px;
+  }
+
+  #about h1 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+  #about p {
+    font-size: 1rem;
   }
 }
