--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -21,3 +21,17 @@
     text-align: center;
   }
 }
+
+@media (max-width: 1060) {
+  #contact h1 {
+    font-size: 2.5rem;
+  }
+
+  #contact h2 {
+    font-size: 2rem;
+  }
+
+  #contact p {
+    font-size: 1rem;
+  }
+}
